// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetInputForm should render correctly with hosts prop and default selection 1`] = `
<form>
  <TextField
    autoFocus={true}
    error={false}
    fullWidth={true}
    label="Name"
    margin="normal"
    onChange={[Function]}
    required={true}
    value=""
  />
  <FormControl
    error={false}
    fullWidth={true}
    required={true}
  >
    <InputLabel
      shrink={true}
    >
      Host
    </InputLabel>
    <Select
      displayEmpty={true}
      onChange={[Function]}
      value="2"
    >
      <MenuItem
        disabled={true}
        value=""
      >
        Select a host
      </MenuItem>
      <MenuItem
        value="1"
      >
        aaa
      </MenuItem>
      <MenuItem
        value="2"
      >
        bbb
      </MenuItem>
    </Select>
  </FormControl>
  <TextField
    error={false}
    fullWidth={true}
    label="From"
    margin="normal"
    onChange={[Function]}
    required={true}
    value=""
  />
  <TextField
    error={false}
    fullWidth={true}
    label="To"
    margin="normal"
    onChange={[Function]}
    required={true}
    value=""
  />
  <DialogActions>
    <Button
      color="primary"
      onClick={[Function]}
    >
      Cancel
    </Button>
    <Button
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      Create
    </Button>
  </DialogActions>
</form>
`;

exports[`TargetInputForm should render correctly with hosts prop with no default selection 1`] = `
<form>
  <TextField
    autoFocus={true}
    error={false}
    fullWidth={true}
    label="Name"
    margin="normal"
    onChange={[Function]}
    required={true}
    value=""
  />
  <FormControl
    error={false}
    fullWidth={true}
    required={true}
  >
    <InputLabel
      shrink={true}
    >
      Host
    </InputLabel>
    <Select
      displayEmpty={true}
      onChange={[Function]}
      value=""
    >
      <MenuItem
        disabled={true}
        value=""
      >
        Select a host
      </MenuItem>
      <MenuItem
        value="1"
      >
        aaa
      </MenuItem>
      <MenuItem
        value="2"
      >
        bbb
      </MenuItem>
    </Select>
  </FormControl>
  <TextField
    error={false}
    fullWidth={true}
    label="From"
    margin="normal"
    onChange={[Function]}
    required={true}
    value=""
  />
  <TextField
    error={false}
    fullWidth={true}
    label="To"
    margin="normal"
    onChange={[Function]}
    required={true}
    value=""
  />
  <DialogActions>
    <Button
      color="primary"
      onClick={[Function]}
    >
      Cancel
    </Button>
    <Button
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      Create
    </Button>
  </DialogActions>
</form>
`;

exports[`TargetInputForm should render correctly with minimum props 1`] = `
<form>
  <TextField
    autoFocus={true}
    error={false}
    fullWidth={true}
    label="Name"
    margin="normal"
    onChange={[Function]}
    required={true}
    value=""
  />
  <FormControl
    error={false}
    fullWidth={true}
    required={true}
  >
    <InputLabel
      shrink={true}
    >
      Host
    </InputLabel>
    <Select
      displayEmpty={true}
      onChange={[Function]}
      value=""
    >
      <MenuItem
        disabled={true}
        value=""
      >
        Select a host
      </MenuItem>
    </Select>
  </FormControl>
  <TextField
    error={false}
    fullWidth={true}
    label="From"
    margin="normal"
    onChange={[Function]}
    required={true}
    value=""
  />
  <TextField
    error={false}
    fullWidth={true}
    label="To"
    margin="normal"
    onChange={[Function]}
    required={true}
    value=""
  />
  <DialogActions>
    <Button
      color="primary"
      onClick={[Function]}
    >
      Cancel
    </Button>
    <Button
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      Create
    </Button>
  </DialogActions>
</form>
`;
